Kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: buildkitd
    app.kubernetes.io/creator: hossein-yousefi
    app.kubernetes.io/stack: build-docker-image      
  name: buildkitd
spec:
  ports:
    - port: 1234
      protocol: TCP
  selector:
    app: buildkitd
